--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ minecraft_version=1.20.1
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.20.1,1.21)
+minecraft_version_range=[1.20.1]
 # The Forge version must agree with the Minecraft version to get a valid artifact
 forge_version=47.2.1
 # The Forge version range can use any version of Forge as bounds or match the loader version range
@@ -42,7 +42,7 @@ mod_name=Voltz
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=All-Rights-Reserved
 # The mod version. See https://semver.org/
-mod_version=0.1
+mod_version=0.1-1.20.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -50,4 +50,4 @@ mod_group_id=org.josh
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Mokeman123
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=The Best Mos In The Land
+mod_description=The Best Mod In The Land
